# revm-by-example

./: Cargo.toml  readme.md
contracts/: SwapRouter.json  swap_router.sol
contracts/lib/: Swapper.sol
contracts/lib/interfaces/: Uniswap.sol
src/: lib.rs
src/examples/: revert_msg.rs  simple_trace.rs  simulate_call.rs  simulate_swap.rs  transfer.rs
src/forked_db/: database_error.rs  fork_db.rs  fork_factory.rs  global_backend.rs  mod.rs  readme.md
src/utils/: mod.rs
